# churn-prediction-mlops

./: .gitignore  README.md  environment.yaml  mlflow.db  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  train.yml
api/: main.py  schemas.py
api/routers/: health.py  monitor.py  predict.py
configs/: random_forest.yaml
data/processed/: df_processed.csv.dvc  processed_churn_data.parquet.dvc
feature_repo/: churn_entities.py  data_sources.py  feature_store.yaml  feature_views.py
mlruns/1/8ed9c76a00b04cc792163ae1c793b45c/artifacts/: config_snapshot.yaml  preprocessing_metadata.json  random_forest_metrics.json
mlruns/1/8ed9c76a00b04cc792163ae1c793b45c/artifacts/model/: MLmodel  conda.yaml  requirements.txt
scripts/: materialize_features.py  run_feast_apply.py  sample_retrieval.py  smoke_test.py
src/data/: prepare_feast_data.py  processing.py  verify_feast_schema.py
src/model/: evaluator.py  trainer.py
src/scripts/: eval.py  train.py
src/serving/: feast_retrieval.py  load_model.py  monitoring.py  pre_processing.py
