[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-churn-phase1"
version = "0.1.0"
description = "Phase 1 local baseline for a customer churn prediction MLOps project."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.3",
  "scikit-learn==1.5.2",
  "pyarrow==17.0.0",
  "PyYAML==6.0.2",
  "matplotlib==3.9.2",
  "seaborn==0.13.2",
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "feast[redis]==0.48.1",
  "mlflow==2.17.2",
  "dvc==3.67.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "src*"]
namespaces = true
